--- a/style.css
+++ b/style.css
@@ -467,8 +467,6 @@ header #click:checked ~ ul li a {
   background-size: cover;
   width: 100vw;
   height: 30vh;
-  -webkit-filter: hue-rotate(338deg);
-          filter: hue-rotate(338deg);
 }
 
 .hero-container .hero-donation {
@@ -491,17 +489,20 @@ header #click:checked ~ ul li a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.research-qoute .qoute-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  font-style: italic;
+.research-qoute .qoute-text p {
+  font-size: 22px;
 }
 
 .research-qoute .qoute-text .signature {
@@ -512,6 +513,7 @@ header #click:checked ~ ul li a {
       -ms-flex-pack: end;
           justify-content: flex-end;
   font-style: normal;
+  font-size: 22px;
 }
 
 .editorial-card {
@@ -545,37 +547,6 @@ header #click:checked ~ ul li a {
   font-weight: 500;
   font-variant-caps: all-petite-caps;
   letter-spacing: 0.3rem;
-}
-
-.editorial-card .card-grid_start .inner .multi-editorial-banners {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.editorial-card .card-grid_start .inner .multi-editorial-banners .item {
-  margin-bottom: 2%;
-  max-height: 400px;
-  max-width: 280px;
-  height: 100%;
-  width: auto;
-}
-
-.editorial-card .card-grid_start .inner .multi-editorial-banners img {
-  border: none;
-  border-radius: 5px;
 }
 
 .editorial-card .card-grid_start .inner .editorial-desc {
@@ -660,6 +631,7 @@ header #click:checked ~ ul li a {
       -ms-flex-pack: center;
           justify-content: center;
   grid-gap: 2em;
+  width: 92vw;
 }
 
 .editorial-card .card-grid_start .inner .gallery .thumbnail-item {
@@ -864,7 +836,7 @@ header #click:checked ~ ul li a {
 .input-area
 label
 .text-field::-webkit-input-placeholder {
-  color: #3d3d3d;
+  color: #3d3d3d81;
   font-size: 16px;
   height: 500px;
   font-weight: 300;
@@ -878,7 +850,7 @@ label
 .input-area
 label
 .text-field:-ms-input-placeholder {
-  color: #3d3d3d;
+  color: #3d3d3d81;
   font-size: 16px;
   height: 500px;
   font-weight: 300;
@@ -892,7 +864,7 @@ label
 .input-area
 label
 .text-field::-ms-input-placeholder {
-  color: #3d3d3d;
+  color: #3d3d3d81;
   font-size: 16px;
   height: 500px;
   font-weight: 300;
@@ -906,7 +878,7 @@ label
 .input-area
 label
 .text-field::placeholder {
-  color: #3d3d3d;
+  color: #3d3d3d81;
   font-size: 16px;
   height: 500px;
   font-weight: 300;
@@ -1217,7 +1189,8 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     max-width: 84%;
   }
   .events-lightbox .events-lightbox__content {
-    width: 93%;
+    max-width: 390px;
+    width: 100%;
   }
   .thank-you-section .thank-you-container .thank-you-message {
     max-width: 415px;
@@ -1246,20 +1219,8 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
   .editorial-card {
     padding: 1.6em;
   }
-  .editorial-card .card-grid_start .inner .gallery {
-    max-width: 460px;
-    width: 100%;
-  }
-  .events-lightbox .events-lightbox__content .item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  .events-lightbox .events-lightbox__content {
+    max-width: 480px;
   }
   /*contact form styles*/
   .contact-page-section .contact-container .contact-form .contact-form-container .input-area label .first-child,
@@ -1273,7 +1234,7 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
 
 @media only screen and (min-width: 895px) {
   .hero-container {
-    height: 70vh;
+    height: 100vh;
   }
   .make-a-donation-section .primary-button {
     width: 330px;
@@ -1318,111 +1279,29 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     padding: 2.5em;
   }
   .editorial-card .card-grid_start .inner .gallery {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1em;
-    max-width: 730px;
-    width: 100%;
-    margin: 2em;
-  }
-  .editorial-card .card-grid_start .inner .gallery .thumbnail-item {
-    border: 1px solid #8c3921;
-    border-radius: 5px;
-    background: #fff;
-  }
-  .editorial-card .card-grid_start .inner .gallery .thumbnail-item .thumbnail__desc {
-    color: #8c3921;
-    font-size: 22px;
-    padding: 1em;
-    padding-bottom: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-  .editorial-card .card-grid_start .inner .gallery .thumbnail-item .thumbnail__editorial {
-    color: #000;
-    font-size: 16px;
-    padding: 1em;
-    padding-bottom: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-  .editorial-card .card-grid_start .inner .gallery .thumbnail-item img {
-    width: 100%;
-    height: auto;
-    border-bottom: 1px solid #8c3921;
-    border-radius: 5px 5px 0 0;
-    -webkit-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-  }
-  .editorial-card .card-grid_start .inner .gallery .thumbnail-item img:hover {
-    opacity: 0.5;
-  }
-  .editorial-card .card-grid_start .inner .gallery .thumbnail-item:hover {
-    text-decoration: underline;
-    color: #8c3921;
-  }
-  .editorial-card .card-grid_start .inner .gallery .thumbnail-item:hover {
-    -webkit-filter: brightness(69%);
-            filter: brightness(69%);
-  }
-  .events-lightbox {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    font-weight: 500;
-    display: none;
-    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    grid-gap: 1em;
   }
   .events-lightbox .events-lightbox__content {
-    position: relative;
-    width: 75%;
-    height: 95%;
-    background: black;
-    padding: 2em;
+    max-width: 450px;
   }
-  .events-lightbox .events-lightbox__content .events-lightbox__title {
-    font-weight: 500;
+  .events-lightbox .events-lightbox__content .item {
+    width: 700px;
   }
-  .events-lightbox .events-lightbox__content .close {
-    position: absolute;
-    width: 2em;
-    height: 2em;
-    background: #fff;
-    top: -1em;
-    right: -1em;
-    border-radius: 50%;
-  }
-  .events-lightbox .events-lightbox__content .close .close-icon {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-item-align: center;
-        align-self: center;
-    justify-self: center;
-  }
-  .events-lightbox .events-lightbox__content .item img {
-    width: 100%;
-    margin: 0 auto;
-  }
-  .events-lightbox:target {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  .events-lightbox .events-lightbox__content img {
+    margin: 0;
   }
   .show-modal {
     top: 34%;
@@ -1570,7 +1449,11 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     padding: 0.9em;
   }
   .events-lightbox .events-lightbox__content {
-    width: 50%;
+    max-width: 504px;
+    height: 765px;
+  }
+  .events-lightbox .events-lightbox__content .item {
+    width: 790px;
   }
   .contact-page-section {
     padding: 4em;
@@ -1639,9 +1522,36 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
   .editorial-card {
     padding: 0 6.5em;
   }
-  .events-lightbox .events-lightbox__content {
-    width: 40%;
-    height: 90%;
+  .editorial-card .card-grid_start .inner .gallery {
+    grid-gap: 1em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 250px;
+            flex: 0 0 250px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    max-width: 91%;
+  }
+  .editorial-card .card-grid_start .inner .gallery .thumbnail-item {
+    border: 1px solid #8c3921;
+    border-radius: 5px;
+    background: #fff;
+    width: calc(910px / 3);
+  }
+  .editorial-card .card-grid_start .inner .gallery .thumbnail-item img {
+    padding: 5px;
   }
   .contact-page-section {
     padding: 2em;
@@ -1685,7 +1595,10 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     margin-left: 10em;
   }
   .editorial-card {
-    margin: 0 6.5em;
+    margin: 0 14em;
+  }
+  .editorial-card .card-grid_start .inner .gallery {
+    max-width: 70%;
   }
   .events-lightbox .events-lightbox__content {
     width: 35%;
@@ -1738,16 +1651,17 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
 
 @media only screen and (min-width: 1879px) {
   .nav-container header .logo {
-    padding-left: 13em;
+    padding-left: 19em;
   }
-  .hero-container {
-    height: 95vh;
+  .nav-container header nav ul {
+    margin-right: 17em;
+    padding-right: 5em;
   }
-  .hero-container .hero-text-content {
-    padding: 14em 6em 0em 14em;
+  .hero-container .hero-donation {
+    margin-left: 7em;
   }
-  .research-qoute {
-    padding: 1em 11em 4em 11em;
+  .editorial-card .card-grid_start .inner img {
+    width: 60%;
   }
   .events-lightbox .events-lightbox__content {
     width: 28%;
