--- a/style.css
+++ b/style.css
@@ -241,6 +241,10 @@ header nav #click {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -259,12 +263,16 @@ header nav #click {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 100%;
 }
 
@@ -775,12 +783,38 @@ header #click:checked ~ ul li a {
 }
 
 .contact-page-section .contact-container .contact-form .contact-form-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border-top: 1px solid #8c3921;
   border-radius: 0;
+  background-color: #fff8bd30;
 }
 
 .contact-page-section .contact-container .contact-form .contact-form-container .left {
-  background: #b5d9545c;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-top: 0.5em;
   border-radius: 5px;
 }
@@ -793,6 +827,10 @@ header #click:checked ~ ul li a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -804,7 +842,7 @@ header #click:checked ~ ul li a {
   color: #8c3921;
   font-family: "Poppins";
   font-size: 16px;
-  background-color: #fff8bd;
+  background-color: #46db4633;
   cursor: pointer;
   width: 100%;
   height: 36px;
@@ -827,6 +865,83 @@ header #click:checked ~ ul li a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.contact-page-section .contact-container .contact-form .contact-form-container .right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.contact-page-section .contact-container .contact-form .contact-form-container .right .contact-form__logo-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-left: none;
+  border-bottom: none;
+  border-right: none;
+  border-top: 1px solid #8c3921;
+  border-radius: 0;
+  width: 100%;
+}
+
+.contact-page-section .contact-container .contact-form .contact-form-container .right .contact-form__logo-container .logo-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 5px;
+  padding: 2em;
+  background: #f1e7e4;
+}
+
+.contact-page-section .contact-container .contact-form .contact-form-container .right .contact-form__logo-container .logo-container img {
+  border: none;
+  width: 350px;
+  height: auto;
+}
+
+.contact-page-section .contact-container .contact-form .contact-form-container .right .contact-form__logo-container .logo-container .logo-title {
+  font-size: 18px;
+  line-height: 0;
+  letter-spacing: 1.1pt;
+  text-transform: uppercase;
+  color: #8c3921;
+}
+
+.contact-page-section .contact-container .contact-form .contact-form-container .right .contact-form__logo-container .logo-container .logo-subtitle {
+  font-size: 12px;
+  line-height: 40px;
+  color: #8c3921;
 }
 
 .contact-page-section
@@ -1464,6 +1579,124 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     width: 39vw;
     height: auto;
   }
+  .contact-page-section .contact-container .contact-form .form-title {
+    margin-left: 3em;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container .left {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background: #fff8bd30;
+    width: 50%;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container .left form {
+    padding-top: 1em;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area .submit-button {
+    background-color: #46db4633;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area .submit-button:hover {
+    background-color: whitesmoke;
+  }
+  .contact-page-section .contact-container .contact-form .right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 50%;
+  }
+  .contact-page-section .contact-container .contact-form .right .contact-form__logo-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-left: 1px solid #8c3921 !important;
+    border-bottom: none !important;
+    border-right: none !important;
+    border-top: none !important;
+    border-radius: 0;
+    width: 100%;
+  }
+  .contact-page-section .contact-container .contact-form .right .contact-form__logo-container .logo-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-radius: 5px;
+    padding: 5em !important;
+    background: #f1e7e4;
+  }
+  .contact-page-section .contact-container .contact-form .right .contact-form__logo-container .logo-container img {
+    border: none;
+    width: 400px;
+    height: auto;
+  }
+  .contact-page-section .contact-container .contact-form .right .contact-form__logo-container .logo-container .logo-title {
+    font-size: 25px;
+    line-height: 0;
+    letter-spacing: 1.1pt;
+    text-transform: uppercase;
+    color: #8c3921;
+  }
+  .contact-page-section .contact-container .contact-form .right .contact-form__logo-container .logo-container .logo-subtitle {
+    font-size: 16px;
+    line-height: 50px;
+    color: #8c3921;
+  }
   .thank-you-section {
     padding: 0.5em;
   }
@@ -1553,18 +1786,6 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
   .editorial-card .card-grid_start .inner .gallery .thumbnail-item img {
     padding: 5px;
   }
-  .contact-page-section {
-    padding: 2em;
-  }
-  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area .submit-button {
-    width: 15vw;
-  }
-  .contact-page-section .show-modal {
-    top: 40%;
-    left: 35%;
-    width: 30vw;
-    height: auto;
-  }
   .thank-you-section .thank-you-container .thank-you-message {
     margin: 2em;
     padding: 1em;
@@ -1604,19 +1825,12 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     width: 35%;
     height: 96%;
   }
-  .contact-page-section {
-    padding: 0;
-  }
-  .contact-page-section .contact-container {
-    margin: 4em;
-  }
-  .contact-page-section .show-modal {
-    width: 25vw;
-  }
-  .contact-page-section .show-modal .close-modal .close-icon {
-    position: relative;
-    top: -34px;
-    left: 186px;
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .first-child,
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .second-child,
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .third-child,
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .text-field {
+    width: 26vw;
+    height: auto;
   }
   footer .footer-container .footer-details {
     padding: 2em 13em;
@@ -1705,8 +1919,116 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .second-child,
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .third-child,
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .text-field {
-    width: 25vw;
+    width: 22vw;
     height: auto;
+    margin: 8px 40px;
+  }
+  .contact-page-section .contact-container .contact-form .form-title {
+    margin-left: 3em;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container .left {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background: #fff8bd30;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container .left form {
+    padding-top: 1em;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area .submit-button {
+    background-color: #46db4633;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area .submit-button:hover {
+    background-color: whitesmoke;
+  }
+  .contact-page-section .contact-container .contact-form .right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+  }
+  .contact-page-section .contact-container .contact-form .right .contact-form__logo-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-left: 1px solid #8c3921;
+    border-bottom: none;
+    border-right: none;
+    border-top: none;
+    border-radius: 0;
+    width: 100%;
+  }
+  .contact-page-section .contact-container .contact-form .right .contact-form__logo-container .logo-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-radius: 5px;
+    padding: 5em;
+    background: #f1e7e4;
+  }
+  .contact-page-section .contact-container .contact-form .right .contact-form__logo-container .logo-container img {
+    border: none;
+    width: 400px;
+    height: auto;
+  }
+  .contact-page-section .contact-container .contact-form .right .contact-form__logo-container .logo-container .logo-title {
+    font-size: 28px;
+    line-height: 0;
+    letter-spacing: 1.1pt;
+    text-transform: uppercase;
+    color: #8c3921;
+  }
+  .contact-page-section .contact-container .contact-form .right .contact-form__logo-container .logo-container .logo-subtitle {
+    font-size: 18px;
+    line-height: 50px;
+    color: #8c3921;
   }
   section {
     padding: 2em 14em;
